# fill-table-trigger

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: FillTable2.cc  Sort_Alg.cpp  Sort_Alg.h  create_hits.h  fill_multi_row_table.h  fill_multi_row_table_g_is_25ns.cpp  fill_multi_row_table_g_is_25ns.h  fill_table_alg.h  fill_table_alg_old.h  hit_desc.h  main.cpp  only_fill_table.h  soft_improvedAlg.cc  soft_sortedHitAlg.cc  soft_tabledHitAlg.cc
test/: BM_sort_vs_merge.cc  BM_test_slide.cc  dowork2.sh  dowork3.sh  dowork4.sh  dowork5.sh  dowork6.sh  loop.sh  test_filltable.cc  test_line.sh  test_log.sh  test_sort_and_merge.cc
